data/derived/fa15/progs/unify/prog3524.ml.out
Characters 79-103:
  | n -> buildSine(build(rand, depth - 1));;
                  ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
